Fixed the error message alignment in mail configuration

--- a/php/orangehrm/symfony/plugins/orangehrmAdminPlugin/web/css/listMailConfiguration.css
+++ b/php/orangehrm/symfony/plugins/orangehrmAdminPlugin/web/css/listMailConfiguration.css
@@ -1,5 +1,3 @@
-label.error[for="txtTestEmail"] {
-    position: relative;
-    left: 300px;
-    width:220px !important;
+.mailTableColumn {
+    width: 325px;
 }
